# MACE

./: .gitignore  .gitmodules  GUIConfig.json  MACEConfig.xsd  MATLABtest.csv  MATLABtest.txt  MaceLocalExe_Sensors.xml  MaceLocalMultiple.xml  MaceSetup.xml  MaceSetup2.xml  MaceSetupDigimeshTesting.xml  MaceSetupGround.xml  MaceSetupLocalVehicle.xml  MaceSetupVehicle.xml  MaceSetup_UDP.xml  PathPlanningTesting.xml  Planners.txt  README.md  RTATesting.xml  simple_test_000_303030.bt  test.xml
Docker/: Dockerfile  Dockerfile_MACE  Dockerfile_SITL
ElectronGUI/: .gitignore  .prettierrc  README.md  gulpfile.js  main.js  package-lock.json  package.json  script.js  tsconfig.json  webpack.config.js
MATLAB/: tcpServerTest.m
catkin_sim_environment/src/sim_gazebo_plugins/: CMakeLists.txt  package.xml
catkin_sim_environment/src/sim_gazebo_plugins/src/: plugin_stop_physics.cpp
html/: index.html
src/module_vehicle_MAVLINK/: CMakeLists.txt  Makefile.Debug  Makefile.Release  generic_message_definition_mavlink.h  message_definition_mavlink.h  module_vehicle_MAVLINK.pro  module_vehicle_mavlink.cpp  module_vehicle_mavlink.cpp.autosave  module_vehicle_mavlink.h  module_vehicle_mavlink_global.h  vehicle_generic_mavlink.cpp  vehicle_generic_mavlink.h
src/module_vehicle_MAVLINK/Vehicles/Ardupilot/: ardupilot_attitude.cpp  ardupilot_attitude.h  ardupilot_flightmode.cpp  ardupilot_flightmode.h  ardupilot_global_position.cpp  ardupilot_global_position.h  ardupilot_home_position.cpp  ardupilot_home_position.h  ardupilot_local_position.cpp  ardupilot_local_position.h  ardupilot_position.cpp  ardupilot_position.h  ardupilot_power.cpp  ardupilot_power.h  ardupilot_status.cpp  ardupilot_status.h  data_ardupilot.cpp  data_ardupilot.h  data_ardupilot_global.h
src/module_vehicle_MAVLINK/controllers/: controller_guided_mission_item.cpp  controller_guided_mission_item.h  controller_guided_target_item.cpp  controller_guided_target_item.h  controller_guided_target_item_global.h  controller_guided_target_item_local.cpp  controller_guided_target_item_local.h  controller_home.h  controller_mission.h  controller_system_mode.h  generic_controller.h  generic_controller_queue_data_with_module.h
src/module_vehicle_MAVLINK/controllers/commands/: command_arm.h  command_land.h  command_rtl.h  command_set_home.h  command_takeoff.h  generic_int_command.h  generic_long_command.h
src/module_vehicle_MAVLINK/data_vehicle/: test.h
src/module_vehicle_MAVLINK/vehicle_object/: mavlink_vehicle_object.cpp  mavlink_vehicle_object.h  mission_data_mavlink.cpp  mission_data_mavlink.h  parse_mavlink.cpp  state_data_mavlink.cpp  state_data_mavlink.h
(+1840 files in other folders)
